# sotto

./: .dockerignore  .gitignore  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  README.md  SECURITY.md  THREAT-MODEL.md  deny.toml  docker-compose.yml  install.ps1  install.sh
.github/workflows/: ci.yml  images.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/examples/: e2e_seed.rs
crates/cli/src/: account.rs  commands.rs  config.rs  dotenv.rs  error.rs  export.rs  keychain.rs  lib.rs  main.rs  paths.rs  session.rs  store.rs  vault.rs
crates/cli/src/remote/: api.rs  auth.rs  config.rs  http.rs  machine.rs  mod.rs  share.rs  sync.rs  team.rs
crates/cli/tests/: e2e.rs
crates/core/: Cargo.toml
crates/core/examples/: gen_vectors.rs
crates/core/src/: aead.rs  envelope.rs  error.rs  format.rs  kdf.rs  lib.rs  names.rs  random.rs  share.rs  vault.rs  vectors.rs  wrap.rs
crates/core/tests/: properties.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_sessions.sql  0003_account.sql  0004_shares.sql  0005_organizations.sql  0006_org_projects.sql  0007_environment_grants.sql  0008_machine_tokens.sql  0009_org_keys.sql  0010_audit_events.sql  0011_entitlements.sql  0012_billing.sql  0013_oauth_logins_index.sql  0014_telemetry.sql
crates/server/src/: account.rs  audit.rs  billing.rs  config.rs  db.rs  encoding.rs  entitlements.rs  error.rs  lib.rs  machine.rs  main.rs  org.rs  share.rs  state.rs  telemetry.rs
crates/server/src/auth/: mock_oauth.rs  mod.rs  oauth.rs  routes.rs  session.rs
crates/server/src/sync/: access.rs  environments.rs  grants.rs  mod.rs  projects.rs  secrets.rs
crates/server/tests/: account.rs  audit.rs  auth.rs  billing.rs  db.rs  entitlements.rs  grants.rs  machine.rs  org.rs  org_access.rs  recovery.rs  rotate.rs  share.rs  sync.rs  telemetry.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: cross_impl.rs
deploy/: .env.example  Dockerfile.web  README.md  backup.sh  docker-compose.prod.yml
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
web/e2e/: README.md  funnel.spec.ts  global-setup.ts
web/public/: site.webmanifest
web/scripts/: smoke.cjs
web/src/: App.tsx  AuthCallback.tsx  Home.tsx  Landing.tsx  RecipientPage.tsx  Shell.tsx  TeamPanel.tsx  VaultApp.tsx  VaultView.tsx  api.ts  base64.ts  main.tsx  vault.ts  wasm.ts
web/src/styles/: landing.css  sordino.css
web/src/styles/tokens/: colors.css  motion.css  spacing.css  typography.css
