[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/server",
    "crates/wasm",
]

[workspace.package]
edition = "2021"
rust-version = "1.89"  # dryoc 0.8 requires Rust >= 1.89
repository = "https://github.com/getsotto/sotto"

[workspace.dependencies]
# Internal
sotto-core = { path = "crates/core" }

# Crypto core: dryoc (pure-Rust libsodium) for Argon2, BLAKE2b kdf, X25519 sealed boxes, RNG.
dryoc = "0.8"
# AEAD: RustCrypto XChaCha20-Poly1305 (wasm32-safe; dryoc's secretstream panics on 32-bit).
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

# Server
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# WASM bindings
wasm-bindgen = "0.2"

# Optimize dependencies (notably dryoc's Argon2/BLAKE2b) even in dev/test builds, so the
# crypto tests run in seconds instead of minutes. Our own crates stay unoptimized for fast
# compiles and good debugging.
[profile.dev.package."*"]
opt-level = 2
