[package]
name = "sotto-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

# The crate is `sotto-cli` (the bare `sotto` crate name is taken on crates.io), but it
# builds a binary named `sotto`.
[[bin]]
name = "sotto"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
rusqlite.workspace = true
uuid.workspace = true
sotto-core.workspace = true
zeroize.workspace = true
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

[dev-dependencies]
tempfile = "3"
