[package]
name = "sotto-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

# The crate is `sotto-cli` (the bare `sotto` crate name is taken on crates.io), but it
# builds a binary named `sotto`.
[[bin]]
name = "sotto"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
rusqlite.workspace = true
uuid.workspace = true
sotto-core.workspace = true
zeroize.workspace = true
# Linux uses the pure-Rust (zbus) Secret Service backend rather than `sync-secret-service`,
# which links the system C library libdbus-1 and would require libdbus-1-dev on every Linux
# build (CI and end users). `async-secret-service` needs a runtime (`async-io`) + crypto provider.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "async-secret-service",
    "async-io",
    "crypto-rust",
] }
rpassword = "7"
serde_json = "1"
clap_complete = "4"
# Sync client. Blocking reqwest keeps the CLI synchronous (no tokio runtime to manage); native-tls
# matches the server (license-clean). base64 transports opaque ciphertext as JSON strings.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "native-tls",
] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
