[package]
name = "sotto-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
dryoc.workspace = true
chacha20poly1305.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
