[package]
name = "sotto-server"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
# CSPRNG + BLAKE2b for session-token generation/hashing (reuses the vetted core crypto dep).
dryoc.workspace = true
# Postgres via sqlx. `tls-native-tls` (system TLS: Secure Transport on macOS, OpenSSL on Linux -
# the same ring-free stack as reqwest below) so a remote/managed database can be reached with
# `sslmode=require` in DATABASE_URL. It changes nothing for the default compose topology, where
# Postgres is internal-only and the URL carries no sslmode (sqlx's `prefer` default falls back to
# plaintext when the server offers no TLS). Runtime queries for now - no compile-time DB / offline
# cache. TTL math stays in SQL (now() + interval, expires_at > now()), so no chrono/time feature.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "migrate",
] }
# OAuth: GitHub identity over HTTPS. native-tls = Secure Transport (macOS) / system OpenSSL
# (Linux) - licence-clean (no ring) and present on our build/deploy hosts.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "native-tls",
] }
async-trait = "0.1"
url = "2"
# Transport opaque account key material (public key, sealed private keys, …) as base64 in JSON.
base64 = "0.22"
# Stripe webhook signature verification: Stripe mandates HMAC-SHA256, which dryoc doesn't expose
# (it has HMAC-SHA512-256). Both crates are already in the tree transitively via sqlx.
hmac = "0.12"
sha2 = "0.10"
# Parse Stripe webhook events; also used by integration tests for response bodies.
serde_json = "1"

[dev-dependencies]
# Drive the router in-process (ServiceExt::oneshot) for handler tests.
tower = { version = "0.5", features = ["util"] }
