[package]
name = "sotto-wasm"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
# `repository` is intentionally not inherited from the workspace: wasm-pack parses this manifest
# itself and doesn't resolve `field.workspace = true`, so an inherited `repository` makes
# `wasm-pack test` fail with "expected a string for key `package.repository`". The crate is
# `publish = false`, so the metadata isn't needed here anyway.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# The Rust wasm target now emits bulk-memory ops (`memory.copy`/`memory.fill`) by default, but the
# `wasm-opt` bundled with wasm-pack validates without that feature and aborts the release build (the
# `web` CI job's "Generate WASM bindings" step). Keep the `-O` optimization but enable the feature so
# wasm-opt accepts the input; bulk memory is supported by every browser this app targets.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']

[dependencies]
sotto-core.workspace = true
wasm-bindgen.workspace = true

# On wasm32-unknown-unknown, getrandom (via dryoc -> rand) needs the JS-backed RNG, selected
# by the `wasm_js` feature alone (getrandom 0.4). Scoped to wasm so native builds are unaffected.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
